# consensus

./: .gitignore  .golangci.yml  AI_CONSENSUS.md  ALL_SDK_REALITY_CHECK.md  ARCHITECTURE_REVIEW.md  AUDIT_REPORT.md  BENCHMARKS.md  BENCHMARKS_SUMMARY.md  BENCHMARK_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_FIXES.md  CI_STATUS.md  CLEANUP_COMPLETE.md  CONSENSUS_DEEP_REVIEW.md  CROSS-REPO-VERSION-PIN.md  C_IMPLEMENTATION_SUMMARY.md  DEDUPLICATION_SUMMARY.md  DEPLOY.md  DNS_SETUP.md  DOCS_SETUP.md  DOCS_STATUS.md  DOCUMENTATION.md  DUPLICATION_QUICK_REFERENCE.txt  ENGINE_README.md  FINAL_CLEANUP_REPORT.md  GENERATION.md  GO_IDIOMATIC_REFACTOR.md  GO_SDK_VERIFICATION_REPORT.md  INTEGRATION.md  INTERFACE_DUPLICATION_REPORT.md  LICENSE  LLM.md  METASTABLE_SIGNED_QUERIES.md  MIGRATION.md  MIGRATION_v1.22.md  MOVE_TO_NODE.md  Makefile  NEXT16_FUMADOCS_STATUS.md  ORGANIZATION_ANALYSIS.md  (+124 more)
.assurance/: budget.txt
.backup_old/: acceptor.go  acceptor_group.go  errors.go
.claude/: settings.local.json
ai/: MLX_FIX_SUMMARY.md  accel.go  accel_cgo.go  accel_stub.go  accel_types.go  agent.go  agent_test.go  ai.go  ai_additional_test.go  ai_comprehensive_test.go  ai_test.go  bridge.go  demo.go  demo_xchain.go  engine.go  engine_test.go  integration.go  integration.go.wip  interfaces.go  mlx.go  mlx_bench_test.go  mlx_test.go  models.go  models_test.go  modules.go  modules_test.go  specialized.go  xchain.go
api/: response.go
assets/: index-7IMxdwEF.js
beam/: beam.go  beam_block.go  beam_test.go  block.go  consensus.go  consensus_test.go  factory.go  finalizer.go  metrics.go  mixed_test.go  mocks_generate_test.go  network_test.go  oracle_block.go  topological.go  topological_test.go  traced_consensus.go
bench/: pq_modes_bench_test.go
benchmark/: doc.go  suite_test.go  zmq_consensus_test.go  zmq_test.go.old
benchmarks/: README.md  run_all_backends.sh
block/: block.go
bootstrap/: common.go
chain/: block.go  chain.go  consensus.go  errors.go  oracle.go
choices/: choices.go  choices_test.go  decidable.go  status.go  status_test.go  test_decidable.go
codec/: codec.go  codec_test.go
confidence/: binary.go  binary_confidence.go  binary_quantum.go  binary_quantum_test.go.skip  binary_slush.go  factory.go  interface.go  poly_quantum_test.go.skip  quantum_test.go.skip  termination.go  threshold.go  unary.go  unary_confidence.go  unary_quantum.go  unary_quantum_test.go.skip
config/: bench_cert_policy_test.go  bft_floor_test.go  bridge_profile.go  bridge_profile_test.go  builder.go  builder.go.bak2  builder.go.bak4  builder.go.bak5  builder.go.bak6  builder.go.bak8  builder.go.bak9  builder.go.rej  cert_policy.go  cert_policy_test.go  compat.go  config.go  config_additional_test.go  config_test.go  constants.go  convert.go  convert_test.go  errors.go  fix_param_test.sh  fpc.go  integration_test.go  interfaces.go  parameters.go  parameters_avalanche_test.go  parameters_test.go  pq_mode.go  pq_mode_test.go  presets.go  presets_test.go  profile.go  profile_test.go  profiles.go  quantum_test.go  quorum_threshold.go  quorum_threshold_test.go  red_floor_differential_test.go  (+14 more)
configs/: ai_consensus.json  go_backend.json  hybrid_backend.json
consensustest/: context.go  decidable.go  simple_context.go  status.go  test.go
context/: context.go  context_test.go
core/: acceptor.go  acceptor_test.go  app_error.go  app_error_test.go  bootstrap.go  bootstrap_test.go  bootstrap_tracker.go  build_test.go  common.go  consensus.go  consensus_test.go  context.go  core.go  decidable.go  errors.go  factory.go  fake_sender.go  health.go  health_test.go  interfaces.go  message.go  network.go  protocol.go  state.go  status.go  status_test.go  stub.go  test_decidable.go  test_decidable_test.go  test_utils.go  types.go  vm.go  vm_test.go
corona/: corona.go  interfaces.go  mock_corona.go  service.go  types.go
crypto/: benchmark_test.go
dag/: dag.go  dag_test.go  test_tx.go  test_vertex.go  tx.go  vertex.go
docs/: .gitignore  .source.ts  BENCHMARKS.md  BUILD_STATUS.md  CORONA_INTEGRATION.md  COSMIC_HIERARCHY.md  DUAL_CERT.md  FPC.md  LUX_COSMIC_ARCHITECTURE.md  LUX_ENGINE_ARCHITECTURE.md  QUASAR.md  QUASAR_PRECOMPILE_SPEC.md  QUASAR_PRODUCTION_READY.md  QUASAR_STAGE6.md  README.md  RINGTAIL_INTEGRATION.md  cli.json  collections.ts  index.html  mdx-components.tsx  migrate-to-lux-consensus.md  next.config.mjs  node_dependencies_analysis.md  package.json  patent-claims-double-lattice.md  patent-claims-q-chain-finality-block.md  patent-claims-quasar-cert.md  patent-claims-quasar-epoch.md  patent-claims-round-signer.md  patent-claims-validator-scheme-gate.md  pnpm-lock.yaml  raft-to-lux.md  source.config.ts  tailwind.config.ts  thrift-to-lux.md  zookeeper-to-lux.md
e2e/: cpp_node.go  (+5 more)
pkg/cpp/: CMakeLists.txt
pkg/cpp/examples/: CMakeLists.txt  mlx_example.cpp  simple_consensus.cpp
pkg/cpp/include/lux/: consensus.hpp  mlx_consensus.hpp
pkg/cpp/src/: avalanche.cpp  chain.cpp  consensus.cpp  mlx_consensus.cpp  network.cpp  vote_processor.cpp
pkg/cpp/tests/: CMakeLists.txt  gpu_probe.cpp  test_all_consensus.cpp  test_consensus.cpp  test_proven_features.cpp
pkg/python/: TEST_RESULTS.md  benchmark_consensus.py  benchmark_cpu.py  benchmark_cpu_results.json  benchmark_cpu_standalone.py  lux_consensus.c  lux_consensus.pyx  pyproject.toml  setup.py  test_consensus.py  test_consensus_comprehensive.py  test_consensus_verification.py  test_mlx_backend.py
pkg/python/examples/: mlx_example.py  simple_consensus.py
pkg/python/lux_consensus/: __init__.py  mlx_backend.py  types.py
pkg/python/lux_consensus/mcp/: __init__.py  consensus.py  mcp_mesh.py
pkg/rust/: BENCHMARK_RESULTS.md  Cargo.toml  README.md  TEST_REPORT.md  build.rs
pkg/rust/benches/: consensus_bench.rs
pkg/rust/examples/: simple_consensus.rs
pkg/rust/src/: lib.rs
pkg/rust/tests/: basic_test.rs  comprehensive_tests.rs.old  verify_consensus.rs
pkg/typescript/: Cargo.toml  README.md  index.d.ts  index.js  lux-consensus.darwin-arm64.node  package.json
pkg/typescript/src/: lib.rs
pkg/typescript/test/: consensus.test.js
(+4458 files in other folders)
