[build-system]
requires = ["setuptools>=64", "wheel", "cython>=3.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lux-consensus"
version = "1.22.0"
description = "Python bindings for Lux Consensus C library with optional MLX GPU acceleration"
authors = [{name = "Lux Industries Inc."}]
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.0.1"]
dev = ["pytest>=7.0.0", "pytest-benchmark>=4.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools]
packages = ["lux_consensus"]
