[package]
name = "lux-consensus"
version = "1.17.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "lux_consensus"
path = "src/lib.rs"

# [[example]]
# name = "basic_usage"
# path = "examples/basic_usage.rs"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "consensus_bench"
harness = false
