[package]
name = "lux-consensus-napi"
version = "1.22.0"
edition = "2021"
description = "TypeScript/Node.js bindings for Lux Consensus SDK"
license = "MIT"
repository = "https://github.com/luxfi/consensus"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", features = ["napi4", "async", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Link to the core consensus crate
lux-consensus = { path = "../rust" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true

[features]
default = []
# Enable MLX GPU acceleration (Apple Silicon)
mlx = []
# Enable CUDA GPU acceleration (NVIDIA)
cuda = []
